# mas_aie

./: .gitignore  AGENTS.md  PROJECT_SPEC.md  README.md  RUNTIME_ENV.md  benchmark.yaml  findings.md  paper_handoff.md  progress.md  pyproject.toml  run_case.py  task_plan.md
benchmark_runs/with_long_term_memory/: case_results.csv  metrics.json  summary.md
benchmark_runs/zero_shot_on_same_sample/: case_results.csv  metrics.json  sampled_dataset.csv  summary.md
dataset/: 1_level.csv
debug_reports/20260323-234054-841331_3fac557fc426/: full_state.json  live_status.md  live_trace.jsonl  summary.json
debug_reports/20260324-002513-856123_df10b6d18d72/: df10b6d18d72_round_01_micro_s1.aip  df10b6d18d72_round_01_micro_s1.aop  full_state.json  live_status.md  live_trace.jsonl  summary.json
debug_reports/20260324-171447-673412_d780d24b5438/: full_state.json  live_status.md  live_trace.jsonl  summary.json
debug_reports/20260324-205130-449647_4df06d8edee6/: full_state.json  live_status.md  live_trace.jsonl  summary.json
debug_reports/20260324-214423-633955_ec22d694364f/: live_status.md  live_trace.jsonl
debug_reports/20260325-011725-762743_6523e66752d2/: full_state.json  live_status.md  live_trace.jsonl  (+1 more)
docs/: AMESP_CAPABILITY_SURFACE.md
env/: amesp.local.example.sh  amesp.sh  benchmark_dataset.example.yaml  linux_llm.local.example.sh  linux_llm.sh  linux_mock.local.example.sh  linux_mock.sh
scripts/: analyze_report_with_api.py  probe_amesp_binary_capabilities.py  probe_amesp_ope_keywords.py  probe_amesp_ope_syntax_matrix.py  probe_microscopic_capabilities.py  pyamesp_smoke.py  run_linux_llm.sh  run_linux_mock.sh  test_planner_gateway.py  test_verifier_gateway.py
tests/: conftest.py  test_cli_execution.py  test_dataset_benchmark.py  test_macro_harness_cli.py  test_macro_llm.py  test_macro_tool.py  test_memory_flow.py  test_microscopic_amesp.py  test_microscopic_llm.py  test_microscopic_tasks.py  test_mock_case_behavior.py  test_openai_compatible.py  test_planner_llm.py  test_planner_task_dispatch.py  test_pyamesp_compat.py  test_pyamesp_smoke.py  test_pyamesp_smoke_cli.py  test_report_analysis.py  test_runtime_config.py  test_shared_structure_context.py  test_smoke.py  test_specialized_agents.py  test_structure_prep.py  test_verifier_branches.py  test_verifier_tool.py  test_working_memory_stagnation.py  test_zero_shot_benchmark.py
(+1142 files in other folders)
